--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     "optimize-autoloader": true
   },
   "require": {
+    "php": ">=7.4",
     "cboden/ratchet": "^0.4.1",
     "ramsey/uuid": "^3.9.2",
     "react/http": "^0.8.5",
